nvml-wrapper-sys/nvml.h

    
    typedef enum nvmlReturn_enum
    {
        NVML_SUCCESS = 0,                        
        NVML_ERROR_UNINITIALIZED = 1,            
        NVML_ERROR_INVALID_ARGUMENT = 2,         
        NVML_ERROR_NOT_SUPPORTED = 3,            
        NVML_ERROR_NO_PERMISSION = 4,            
        NVML_ERROR_ALREADY_INITIALIZED = 5,      
        NVML_ERROR_NOT_FOUND = 6,                
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        
        NVML_ERROR_INSUFFICIENT_POWER = 8,       
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        
        NVML_ERROR_TIMEOUT = 10,                 
        NVML_ERROR_IRQ_ISSUE = 11,               
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      
        NVML_ERROR_CORRUPTED_INFOROM = 14,       
        NVML_ERROR_GPU_IS_LOST = 15,             
        NVML_ERROR_RESET_REQUIRED = 16,          
        NVML_ERROR_OPERATING_SYSTEM = 17,        
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, 
        NVML_ERROR_IN_USE = 19,                  
        NVML_ERROR_MEMORY = 20,                  
        NVML_ERROR_NO_DATA = 21,                 
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  
        NVML_ERROR_UNKNOWN = 999                 
    } nvmlReturn_t;
    typedef enum
    {
        NVML_GRID_LICENSE_FEATURE_CODE_VGPU = 1,        
        NVML_GRID_LICENSE_FEATURE_CODE_VWORKSTATION = 2 
    } nvmlGridLicenseFeatureCode_t;
    typedef unsigned int nvmlVgpuInstance_t;
    typedef struct nvmlVgpuProcessUtilizationSample_st
    {
        nvmlVgpuInstance_t vgpuInstance;              
        unsigned int pid;                             
        char processName[NVML_VGPU_NAME_BUFFER_SIZE]; 
        unsigned long long timeStamp;                 
        unsigned int smUtil;                          
        unsigned int memUtil;                         
        unsigned int encUtil;                         
        unsigned int decUtil;                         
    } nvmlVgpuProcessUtilizationSample_t;
    typedef struct nvmlProcessUtilizationSample_st
    {
        unsigned int pid;             
        unsigned long long timeStamp; 
        unsigned int smUtil;          
        unsigned int memUtil;         
        unsigned int encUtil;         
        unsigned int decUtil;         
    } nvmlProcessUtilizationSample_t;
    typedef struct nvmlGridLicensableFeature_st
    {
        nvmlGridLicenseFeatureCode_t featureCode; 
        unsigned int featureState;                
        char licenseInfo[NVML_GRID_LICENSE_BUFFER_SIZE];
        char productName[NVML_GRID_LICENSE_BUFFER_SIZE];
        unsigned int featureEnabled; 
    } nvmlGridLicensableFeature_t;
    typedef struct nvmlGridLicensableFeatures_st
    {
        int isGridLicenseSupported;                                                              
        unsigned int licensableFeaturesCount;                                                    
        nvmlGridLicensableFeature_t gridLicensableFeatures[NVML_GRID_LICENSE_FEATURE_MAX_COUNT]; 
    } nvmlGridLicensableFeatures_t;
    typedef struct nvmlUnit_st *nvmlUnit_t;
    typedef enum nvmlLedColor_enum
    {
        NVML_LED_COLOR_GREEN = 0, 
        NVML_LED_COLOR_AMBER = 1  
    } nvmlLedColor_t;
    typedef struct nvmlLedState_st
    {
        char cause[256];      
        nvmlLedColor_t color; 
    } nvmlLedState_t;
    typedef struct nvmlUnitInfo_st
    {
        char name[96];            
        char id[96];              
        char serial[96];          
        char firmwareVersion[96]; 
    } nvmlUnitInfo_t;
    typedef struct nvmlPSUInfo_st
    {
        char state[256];      
        unsigned int current; 
        unsigned int voltage; 
        unsigned int power;   
    } nvmlPSUInfo_t;
    typedef enum nvmlEncoderQueryType_enum
    {
        NVML_ENCODER_QUERY_H264 = 0, 
        NVML_ENCODER_QUERY_HEVC = 1, 
    } nvmlEncoderType_t;
    typedef struct nvmlEncoderSessionInfo_st
    {
        unsigned int sessionId;          
        unsigned int pid;                
        nvmlVgpuInstance_t vgpuInstance; 
        nvmlEncoderType_t codecType;     
        unsigned int hResolution;        
        unsigned int vResolution;        
        unsigned int averageFps;         
        unsigned int averageLatency;     
    } nvmlEncoderSessionInfo_t;
    nvmlReturn_t DECLDIR nvmlInit_v2(void);
    nvmlReturn_t DECLDIR nvmlShutdown(void);
    const DECLDIR char *nvmlErrorString(nvmlReturn_t result);
    nvmlReturn_t DECLDIR nvmlSystemGetDriverVersion(char *version, unsigned int length);
    nvmlReturn_t DECLDIR nvmlSystemGetNVMLVersion(char *version, unsigned int length);
    nvmlReturn_t DECLDIR nvmlSystemGetCudaDriverVersion(int *cudaDriverVersion);
    nvmlReturn_t DECLDIR nvmlSystemGetProcessName(unsigned int pid, char *name, unsigned int length);
    nvmlReturn_t DECLDIR nvmlUnitGetCount(unsigned int *unitCount);
    nvmlReturn_t DECLDIR nvmlUnitGetHandleByIndex(unsigned int index, nvmlUnit_t *unit);
    nvmlReturn_t DECLDIR nvmlUnitGetUnitInfo(nvmlUnit_t unit, nvmlUnitInfo_t *info);
    nvmlReturn_t DECLDIR nvmlUnitGetLedState(nvmlUnit_t unit, nvmlLedState_t *state);
    nvmlReturn_t DECLDIR nvmlUnitGetPsuInfo(nvmlUnit_t unit, nvmlPSUInfo_t *psu);