nvml-wrapper-sys/src/bindings.rs

pub type nvmlVgpuProcessUtilizationSample_t =
    nvmlVgpuProcessUtilizationSample_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlProcessUtilizationSample_st {
    pub pid: raw::c_uint,
    pub timeStamp: raw::c_ulonglong,
    pub smUtil: raw::c_uint,
    pub memUtil: raw::c_uint,
    pub encUtil: raw::c_uint,
    pub decUtil: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlProcessUtilizationSample_st() {
    assert_eq!(::std::mem::size_of::<nvmlProcessUtilizationSample_st>() ,
               32usize , concat ! (
               "Size of: " , stringify ! ( nvmlProcessUtilizationSample_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlProcessUtilizationSample_st>() ,
                8usize , concat ! (
                "Alignment of " , stringify ! (
                nvmlProcessUtilizationSample_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) . pid
                as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! ( pid )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) .
                timeStamp as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! (
                timeStamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) .
                smUtil as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! (
                smUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) .
                memUtil as * const _ as usize } , 20usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! (
                memUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) .
                encUtil as * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! (
                encUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessUtilizationSample_st ) ) .
                decUtil as * const _ as usize } , 28usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlProcessUtilizationSample_st ) , "::" , stringify ! (
                decUtil ) ));
}
impl Clone for nvmlProcessUtilizationSample_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlProcessUtilizationSample_t = nvmlProcessUtilizationSample_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlGridLicensableFeature_st {
    pub featureCode: nvmlGridLicenseFeatureCode_t,
    pub featureState: raw::c_uint,
    pub licenseInfo: [raw::c_char; 128usize],
}
#[test]
fn bindgen_test_layout_nvmlGridLicensableFeature_st() {
    assert_eq!(::std::mem::size_of::<nvmlGridLicensableFeature_st>() ,
               136usize , concat ! (
               "Size of: " , stringify ! ( nvmlGridLicensableFeature_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlGridLicensableFeature_st>() ,
                4usize , concat ! (
                "Alignment of " , stringify ! ( nvmlGridLicensableFeature_st )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeature_st ) ) .
                featureCode as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeature_st ) , "::" , stringify ! (
                featureCode ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeature_st ) ) .
                featureState as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeature_st ) , "::" , stringify ! (
                featureState ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeature_st ) ) .
                licenseInfo as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeature_st ) , "::" , stringify ! (
                licenseInfo ) ));
}
impl Clone for nvmlGridLicensableFeature_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlGridLicensableFeature_t = nvmlGridLicensableFeature_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlGridLicensableFeatures_st {
    pub isGridLicenseSupported: raw::c_int,
    pub licensableFeaturesCount: raw::c_uint,
    pub gridLicensableFeatures: [nvmlGridLicensableFeature_t; 3usize],
}
#[test]
fn bindgen_test_layout_nvmlGridLicensableFeatures_st() {
    assert_eq!(::std::mem::size_of::<nvmlGridLicensableFeatures_st>() ,
               416usize , concat ! (
               "Size of: " , stringify ! ( nvmlGridLicensableFeatures_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlGridLicensableFeatures_st>() ,
                4usize , concat ! (
                "Alignment of " , stringify ! ( nvmlGridLicensableFeatures_st
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeatures_st ) ) .
                isGridLicenseSupported as * const _ as usize } , 0usize ,
                concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeatures_st ) , "::" , stringify ! (
                isGridLicenseSupported ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeatures_st ) ) .
                licensableFeaturesCount as * const _ as usize } , 4usize ,
                concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeatures_st ) , "::" , stringify ! (
                licensableFeaturesCount ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlGridLicensableFeatures_st ) ) .
                gridLicensableFeatures as * const _ as usize } , 8usize ,
                concat ! (
                "Alignment of field: " , stringify ! (
                nvmlGridLicensableFeatures_st ) , "::" , stringify ! (
                gridLicensableFeatures ) ));
}
impl Clone for nvmlGridLicensableFeatures_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlGridLicensableFeatures_t = nvmlGridLicensableFeatures_st;
pub const nvmlEncoderQueryType_enum_NVML_ENCODER_QUERY_H264:
          nvmlEncoderQueryType_enum =
    0;
pub const nvmlEncoderQueryType_enum_NVML_ENCODER_QUERY_HEVC:
          nvmlEncoderQueryType_enum =
    1;
pub type nvmlEncoderQueryType_enum = raw::c_uint;
pub use self::nvmlEncoderQueryType_enum as nvmlEncoderType_t;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlEncoderSessionInfo_st {
    pub sessionId: raw::c_uint,
    pub pid: raw::c_uint,
    pub vgpuInstance: nvmlVgpuInstance_t,
    pub codecType: nvmlEncoderType_t,
    pub hResolution: raw::c_uint,
    pub vResolution: raw::c_uint,
    pub averageFps: raw::c_uint,
    pub averageLatency: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlEncoderSessionInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlEncoderSessionInfo_st>() , 32usize ,
               concat ! (
               "Size of: " , stringify ! ( nvmlEncoderSessionInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlEncoderSessionInfo_st>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlEncoderSessionInfo_st )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) . sessionId
                as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( sessionId )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) . pid as *
                const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( pid ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) .
                vgpuInstance as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! (
                vgpuInstance ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) . codecType
                as * const _ as usize } , 12usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( codecType )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) .
                hResolution as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( hResolution
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) .
                vResolution as * const _ as usize } , 20usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( vResolution
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) .
                averageFps as * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! ( averageFps
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEncoderSessionInfo_st ) ) .
                averageLatency as * const _ as usize } , 28usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlEncoderSessionInfo_st ) , "::" , stringify ! (
                averageLatency ) ));
}
impl Clone for nvmlEncoderSessionInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlEncoderSessionInfo_t = nvmlEncoderSessionInfo_st;
extern "C" {
    pub fn nvmlInit_v2() -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlShutdown() -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlErrorString(result: nvmlReturn_t) -> *const raw::c_char;
}
extern "C" {
    pub fn nvmlSystemGetDriverVersion(version: *mut raw::c_char,
                                      length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetNVMLVersion(version: *mut raw::c_char,
                                    length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetCudaDriverVersion(cudaDriverVersion: *mut raw::c_int)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetProcessName(pid: raw::c_uint, name: *mut raw::c_char,
                                    length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetCount(unitCount: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetHandleByIndex(index: raw::c_uint, unit: *mut nvmlUnit_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetUnitInfo(unit: nvmlUnit_t, info: *mut nvmlUnitInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetLedState(unit: nvmlUnit_t, state: *mut nvmlLedState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetPsuInfo(unit: nvmlUnit_t, psu: *mut nvmlPSUInfo_t)
     -> nvmlReturn_t;
}
